# FluffyApp-RE

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  copilot-instructions.md
SentinelFlappy3D/: .gitignore  CMakeLists.txt  README.md
SentinelFlappy3D/docs/: BUILD_AND_RUN_GUIDE.md  COMPLETE_SUMMARY.md  STEP1_SUMMARY.md  STEP2_3_SUMMARY.md  TESTING_GUIDE.md  VM_INTEGRATION.md
SentinelFlappy3D/game/: CMakeLists.txt
SentinelFlappy3D/game/src/: Game.cpp  Game.hpp  Input.cpp  Input.hpp  Obstacle.cpp  Obstacle.hpp  Physics.cpp  Physics.hpp  Player.cpp  Player.hpp  Renderer.cpp  Renderer.hpp  SentinelIntegration.cpp  SentinelIntegration.hpp  main.cpp
SentinelFlappy3D/server/: CMakeLists.txt  HeartbeatValidator.cpp  HeartbeatValidator.hpp  SessionManager.cpp  SessionManager.hpp  TelemetryHandler.cpp  TelemetryHandler.hpp  main.cpp
examples/DummyGame/: CMakeLists.txt  README.md  main.cpp
examples/MinimalIntegration/: CMakeLists.txt  MinimalIntegration.cpp  README.md
examples/PerformanceMetricsDemo/: CMakeLists.txt  README.md  performance_metrics_demo.cpp
src/Core/: AnalysisResistance.cpp  CMakeLists.txt
src/Core/Config/: SecureConfigLoader.cpp
src/Core/Crypto/: AESCipher.cpp  Base64.cpp  ConstantTimeCompare.cpp  CryptoUtils.cpp  HMAC.cpp  HashEngine.cpp  OpenSSLRAII.hpp  README_RAII_Pattern.md  RSASigner.cpp  SecureRandom.cpp  SecureZero.cpp
src/Core/Memory/: MemoryScanner.cpp  MemoryWriter.cpp  PatternScanner.cpp  ProtectionManager.cpp  RegionEnumerator.cpp
src/Core/Network/: CertPinner.cpp  CertificatePinning.cpp  Heartbeat.cpp  HttpClient.cpp  HttpClientImpl.cpp  RequestSigner.cpp  ServerDirective.cpp  TlsContext.cpp
src/Core/Types/: Result.cpp  Types.cpp
src/Core/Utils/: Logger.cpp  StringUtils.cpp
src/Cortex/: CMakeLists.txt  main.cpp
src/Cortex/Analysis/: BinaryAnalyzer.cpp  BinaryAnalyzer.hpp  BinaryDiffer.cpp  BinaryDiffer.hpp  DiffEngine.cpp  DiffEngine.hpp  Disassembler.cpp  Disassembler.hpp  FuzzyHasher.cpp  FuzzyHasher.hpp  SignatureDatabase.cpp  SignatureDatabase.hpp
src/Cortex/Application/: CortexApplication.cpp  CortexApplication.hpp
src/Cortex/Cloud/: CloudClient.cpp  CloudClient.hpp  CloudSync.cpp  CloudSync.hpp
src/Cortex/Controllers/: AnalyzerController.cpp  AnalyzerController.hpp  DashboardController.cpp  DashboardController.hpp  DiffController.cpp  DiffController.hpp  SettingsController.cpp  SettingsController.hpp  VMTraceController.cpp  VMTraceController.hpp
src/Cortex/PatchGen/: PatchGenerator.cpp  PatchGenerator.hpp  PatchSerializer.cpp  PatchSerializer.hpp
src/Cortex/UI/qml/: Main.qml  Theme.qml
src/Cortex/UI/qml/Components/: DiffView.qml  HexView.qml  (+1 more)
src/Cortex/UI/resources/: cortex.rc
src/Cortex/VMDeobfuscator/: DynamicTracer.cpp  DynamicTracer.hpp  PatternMatcher.cpp  PatternMatcher.hpp  SSALifter.cpp  SSALifter.hpp  SymbolicEngine.cpp  SymbolicEngine.hpp  VMDeobfuscator.cpp  VMDeobfuscator.hpp
src/SDK/: CMakeLists.txt
src/SDK/cmake/: SentinelSDKConfig.cmake.in
src/SDK/examples/: README.md
src/SDK/include/: SentinelSDK.hpp
src/SDK/src/: SentinelSDK.cpp
src/SDK/src/Core/: FunctionProtection.cpp  Heartbeat.cpp  MemoryProtection.cpp  Whitelist.cpp
src/SDK/src/Detection/: AntiDebug.cpp  AntiHook.cpp  EnvironmentDetection.cpp  InjectionDetect.cpp  IntegrityCheck.cpp  SpeedHack.cpp
src/SDK/src/Internal/: BehavioralCollector.cpp  BehavioralCollector.hpp  Context.hpp  CorrelationEngine.cpp  CorrelationEngine.hpp  Detection.hpp  DetectionRegistry.cpp  DetectionRegistry.hpp  DiversityEngine.cpp  DiversityEngine.hpp  EnvironmentDetection.hpp  InitializationRandomizer.cpp  InitializationRandomizer.hpp  IntegrityValidator.cpp  IntegrityValidator.hpp  InternalUtils.cpp  JITSignature.cpp  JITSignature.hpp  OverlayVerifier.cpp  OverlayVerifier.hpp  PerfTelemetry.cpp  PerfTelemetry.hpp  ProtectedValue.hpp  Protection.hpp  RedundantAntiDebug.cpp  RedundantAntiDebug.hpp  RuntimeConfig.cpp  RuntimeConfig.hpp  SafeMemory.cpp  SafeMemory.hpp  ScanScheduler.cpp  ScanScheduler.hpp  SignatureManager.cpp  SignatureManager.hpp  SignatureVerify.cpp  SignatureVerify.hpp  TelemetryEmitter.cpp  TelemetryEmitter.hpp  TimingRandomizer.cpp  TimingRandomizer.hpp  (+3 more)
src/SDK/src/Network/: CloudReporter.cpp  PacketEncryption.cpp  UpdateClient.cpp  UpdateClient.hpp
src/SDK/src/Util/: HardwareId.cpp
src/Watchtower/: CMakeLists.txt
src/Watchtower/include/: Watchtower.hpp
src/Watchtower/src/Lua/: LuaModule.cpp
tests/: CMakeLists.txt  README_TestHarness.md  TestHarness.cpp  TestHarness.hpp
tests/Core/: test_aes_cipher.cpp  test_analysis_resistance.cpp  test_certificate_pinning.cpp  test_config_loader.cpp  test_constant_time.cpp  test_crypto.cpp  test_harness.cpp  test_heartbeat.cpp  test_http_client.cpp  test_logger.cpp  test_main.cpp  test_memory.cpp  test_obfuscated_string.cpp  test_request_signer.cpp  test_request_signing_integration.cpp  test_rsa_signer.cpp  test_secure_zero.cpp
tests/Cortex/: test_binarydiff.cpp  test_patchgenerator.cpp  test_vmdeobfuscator.cpp
tests/SDK/: IMPLEMENTATION_SUMMARY.md  README_FUZZING.md  RSATestHelpers.hpp  fuzz_vm.cpp  generate_seed_corpus.py  manual_iat_test.cpp  standalone_diversity_test.cpp  test_anti_debug.cpp  test_anti_hook.cpp  test_behavioral_collector.cpp  test_client_integrity_attestation.cpp  test_cloud_reporter.cpp  test_correlation_engine.cpp  test_correlation_enhancements.cpp  test_correlation_integration.cpp  test_diversity_engine.cpp  test_environment_detection.cpp  test_exception_budget.cpp  test_handle_generation.cpp  test_heartbeat_integration.cpp  test_injection_detect.cpp  test_integrity.cpp  test_integrity_validator.cpp  test_main.cpp  test_overlay_verifier.cpp  test_packet_encryption.cpp  test_perf_telemetry.cpp  test_protected_value.cpp  test_redundant_detection.cpp  test_safe_memory.cpp  test_scan_scheduler.cpp  test_signature_manager.cpp  test_signature_verify.cpp  test_speed_hack.cpp  test_telemetry_config.cpp  test_timing_randomizer.cpp  test_update_client.cpp  test_violation_event_string_safety.cpp  test_vm.cpp  test_watchdog.cpp  (+2 more)
(+158 files in other folders)
